--- a/composer.json
+++ b/composer.json
@@ -18,9 +18,9 @@
   ],
   "require": {
     "php": "^7.4|^8.0",
-    "illuminate/support": "^6.0|^7.0|^8.0|^9.0",
-    "illuminate/contracts": "^6.0|^7.0|^8.0|^9.0",
-    "illuminate/view": "^6.0|^7.0|^8.0|^9.0",
+    "illuminate/support": "^6.0|^7.0|^8.0|^9.0|^10.0|^11.0|^12.0",
+    "illuminate/contracts": "^6.0|^7.0|^8.0|^9.0|^10.0|^11.0|^12.0",
+    "illuminate/view": "^6.0|^7.0|^8.0|^9.0|^10.0|^11.0|^12.0",
     "wsdltophp/packagebase": "~5.0",
     "ext-json": "*",
     "ext-soap": "*"
